# gsi-pluto

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.base  Makefile.fairsoft  Makefile.plugins  PlutoLinkDef.h  PlutoLinkdef.h  README  REFERENCES  Version.h
plugins/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
plugins/beamline/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PBeamLineSimulation.cc  PBeamLineSimulation.h  PDistributionManager.mod.cc  README  cmake_install.cmake  dummy_macro.C  pibeam_set6.data
plugins/brems/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PBremsstrahlung.cc  PBremsstrahlung.h  PBremsstrahlungPlugin.cc  PBremsstrahlungPlugin.h  PDistributionManager.mod.cc  README  cmake_install.cmake  shyam_README.txt
plugins/dalitz_mod/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PDalitzModPlugin.cc  PDalitzModPlugin.h  PDeltaDalitzFF.cc  PDeltaDalitzFF.h  PDeltaDalitzKrivoruchenko.cc  PDeltaDalitzKrivoruchenko.h  PDistributionManager.mod.cc  PResonanceDalitz.cc  PResonanceDalitz.h  README  cmake_install.cmake
plugins/dalitz_radiative-corrections/: Makefile  PDalitzCorrectionsPlugin.cc  PDalitzCorrectionsPlugin.h  PDistributionManager.mod.cc  PRadiativeCorrections.cc  PRadiativeCorrections.h  PRadiativeCorrectionsElectron.cc  PRadiativeCorrectionsElectron.h  PRadiativeCorrectionsMuon.cc  PRadiativeCorrectionsMuon.h  README  demo.lst  dilepton_radiative_corrections.h  dimuon_radiative_corrections.h  eta_ee_corrections  eta_mumu_corrections  etap_ee_corrections  etap_eeg_example.C  etap_mumu_corrections  (+2 more)
(+569 files in other folders)
